Adding pom files to allow build with tycho